tests/ui/feature-gates/feature-gate-export-visibility.stderr
error[E0658]: the `#[export_visibility]` attribute is an experimental feature
  --> $DIR/feature-gate-export-visibility.rs:4:1
   |
LL | #[export_visibility = "target_default"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #151425 <https://github.com/rust-lang/rust/issues/151425> for more information
   = help: add `#![feature(export_visibility)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
